--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
       width: 100%;
       height: 100vh;
       background-image: linear-gradient(rgba(0,0,0,0.75), 
-      rgba(0, 0, 0, 0.75)), url('/static/img/bg.jpg');
+      rgba(0, 0, 0, 0.75)), url('img/bg.jpg');
       background-size: cover;
       background-position: center;
 }
@@ -119,7 +119,7 @@ button a{
 
 .content_contact {
     width: 50%;
-    font-size: 60px;
+    font-size: 20px;
     text-align: center;
     position: absolute;
     color: #fff;
@@ -132,3 +132,59 @@ button a{
     color: #fff;
 }
 
+.contact_wrapper {
+    width: 755px;
+    margin: 0 auto;
+
+}
+
+.red{
+    color: red;
+}
+
+.form_inputs{
+    display: flex;
+}
+
+input:first-of-type{
+    margin-right: 35px;
+}
+
+/*.name{*/
+/*    width: 100%;*/
+/*    height: 40px;*/
+/*}*/
+/*.email{*/
+/*    width: 100%;*/
+/*    height: 40px;*/
+/*}*/
+
+textarea{
+    width: 100%;
+    height: 163px;
+}
+input{
+    width: 360px;
+    height: 40px;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+input, textarea{
+    border: 1px solid #999999;
+    margin-top: 5px;
+    resize: none;
+}
+
+.button_block{
+    display: flex;
+    justify-content: flex-end;
+}
+
+input[type=submit]{
+    width: 165px;
+    height: 40px;
+    margin-right: 0;
+    margin-top: 20px;
+
+}
