add base.html remade htmls

--- a/templates/prices.html
+++ b/templates/prices.html
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Price</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    
-    <div class="banner">
-        <div class="navbar">
-            <ul>
-                <li><a href="/home/">Home</a></li>
-                <li><a href="/prices/">Prices</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/contact/">Contact</a></li>
-            </ul>
+{% extends "base.html" %}
+
+{% block main_block %}
 
         <div class="content_prices">
             <table>
@@ -30,28 +14,23 @@
                 <tr>
                     <th><a href="#">Standart</a></th>
                     <th>100.000</th>
-                    
+
                 </tr>
                 <tr>
                     <th><a href="#">Lux</a></th>
                     <th>200.000</th>
-                    
+
                 </tr>
                 <tr>
                     <th><a href="#">Top of the Top</a></th>
                     <th>300.000</th>
-                
+
                 </tr>
-                
+
             </table>
 
-            
-        </div>
-
-
 
         </div>
-    </div>
 
-</body>
-</html>
+
+{% endblock %}
