--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/static/style.css">
+{% extends "base.html" %}
 
+{% block main_block %}
 
-</head>
-<body>
-    
-
-    <div class="banner">
-        <div class="navbar">
-            <ul>
-                <li><a href="/home/">Home</a></li>
-                <li><a href="/prices/">Prices</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/contact/">Contact</a></li>
-            </ul>
-
-        <div class="content_contact">
+    <div class="content_contact">
 
             <section class="contact_form">
 
@@ -50,10 +31,4 @@
             </section>
         </div>
 
-
-
-        </div>
-    </div>
-    
-</body>
-</html>
+{% endblock %}
