update requirements.txt add patterns

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,12 @@
         <div class="navbar">
             <ul>
                 <li><a href="/home/">Home</a></li>
-                <li><a href="/prices/">Prices</a></li>
-                <li><a href="/about/">About</a></li>
-                <li><a href="/contact/">Contact</a></li>
+                <li><a href="/prices/">Услуги</a></li>
+                <li><a href="/about/">О нас</a></li>
+                <li><a href="/contact/">Контакты</a></li>
+                <li><a href="/category_list/">Категории услуг</a></li>
+                <li><a href="/create_category/">Создать категорию</a></li>
+<!--                <li><a href="/create_service/">Создать услугу</a></li>-->
             </ul>
 
           {% block main_block %}
