--- a/static/style.css
+++ b/static/style.css
@@ -116,6 +116,16 @@ button a{
     transform: translateY(-50%);
     top: 50%;
 }
+.content_about_price{
+    width: 50%;
+    font-size: 25px;
+    text-align: center;
+    position: absolute;
+    color: #fff;
+    transform: translateY(-50%);
+    top: 50%;
+}
+
 
 .content_contact {
     width: 50%;
@@ -187,4 +197,8 @@ input[type=submit]{
     margin-right: 0;
     margin-top: 20px;
 
+}
+
+.copy {
+    font-size: 20px;
 }
